Refactor and enhance slideshow gallery implementation
Consolidated navigation and slideshow logic into script.js, removing infografis.js and topnav.js. Updated index.html to use a new, modern slideshow gallery with thumbnails and captions, and moved the advanced slider logic inline. Added and improved slideshow styles in index.css, and provided a standalone demo in slideShow.html. The previous slideShow.css now contains a full HTML demo for reference.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link href="/CSS/topnav.css" rel="stylesheet" type="text/css">
 <link href="/CSS/footer.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
-<link href="slideShow.css" rel="stylesheet" type="text/css">
+<!--<link href="slideShow.css" rel="stylesheet" type="text/css">-->
 
 
 <title>BKPSDMD Kabupaten Merangin</title>
@@ -93,27 +93,39 @@
 </div>
 	
 <!------------------- CONTENT ----------------------------------->
-<h2 style="text-align:center">INFO GRAFIS</h2>
-
+<!--
+<div class="infoGrafis">
+	<h2>INFO GRAFIS</h2>
+	<img class="mySlides" src="images/InfoGrafis/1.jpg">
+	<img class="mySlides" src="images/InfoGrafis/2.jpg">
+	<img class="mySlides" src="images/InfoGrafis/3.jpg">
+	<img class="mySlides" src="images/InfoGrafis/4.jpg">
+	<img class="mySlides" src="images/InfoGrafis/5.jpg">
+	<img class="mySlides" src="images/InfoGrafis/6.jpg">
+	<img class="mySlides" src="images/InfoGrafis/7.jpg">
+	<img class="mySlides" src="images/InfoGrafis/8.jpg">
+	<img class="mySlides" src="images/InfoGrafis/9.jpg">
+	<img class="mySlides" src="images/InfoGrafis/10.jpg">
+</div>-->
 <div class="slideshow-container">
 
   <div class="slides">
-    <img src="images/InfoGrafis/1.jpg" alt="Nature 1">
+    <img src="https://picsum.photos/id/1015/900/500" alt="Nature 1">
     <div class="caption">Beautiful Mountain View</div>
   </div>
 
   <div class="slides">
-    <img src="images/InfoGrafis/2.jpg" alt="Nature 2">
+    <img src="https://picsum.photos/id/1025/900/500" alt="Nature 2">
     <div class="caption">Peaceful Beach</div>
   </div>
 
   <div class="slides">
-    <img src="images/InfoGrafis/3.jpg" alt="Nature 3">
+    <img src="https://picsum.photos/id/1035/900/500" alt="Nature 3">
     <div class="caption">Misty Forest</div>
   </div>
 
   <div class="slides">
-    <img src="images/InfoGrafis/4.jpg" alt="Nature 4">
+    <img src="https://picsum.photos/id/1045/900/500" alt="Nature 4">
     <div class="caption">Golden Sunset</div>
   </div>
 
@@ -132,25 +144,11 @@
 
 <!-- Thumbnail navigation -->
 <div class="thumbnail-row">
-  <img src="images/InfoGrafis/1.jpg" onclick="currentSlide(1)">
-  <img src="images/InfoGrafis/2.jpg" onclick="currentSlide(2)">
-  <img src="images/InfoGrafis/3.jpg" onclick="currentSlide(3)">
-  <img src="images/InfoGrafis/4.jpg" onclick="currentSlide(4)">
+  <img src="https://picsum.photos/id/1015/200/120" onclick="currentSlide(1)">
+  <img src="https://picsum.photos/id/1025/200/120" onclick="currentSlide(2)">
+  <img src="https://picsum.photos/id/1035/200/120" onclick="currentSlide(3)">
+  <img src="https://picsum.photos/id/1045/200/120" onclick="currentSlide(4)">
 </div>
-<!--
-<div class="infoGrafis">
-	<h2>INFO GRAFIS</h2>
-	<img class="mySlides" src="images/InfoGrafis/1.jpg">
-	<img class="mySlides" src="images/InfoGrafis/2.jpg">
-	<img class="mySlides" src="images/InfoGrafis/3.jpg">
-	<img class="mySlides" src="images/InfoGrafis/4.jpg">
-	<img class="mySlides" src="images/InfoGrafis/5.jpg">
-	<img class="mySlides" src="images/InfoGrafis/6.jpg">
-	<img class="mySlides" src="images/InfoGrafis/7.jpg">
-	<img class="mySlides" src="images/InfoGrafis/8.jpg">
-	<img class="mySlides" src="images/InfoGrafis/9.jpg">
-	<img class="mySlides" src="images/InfoGrafis/10.jpg">
-</div>-->
 
 <div class="pidato-kaban">
 	<h2> Sekapur Sirih<br><p>Kepala BKPSDMD Kabupaten Merangin</p></h2>
@@ -171,40 +169,41 @@
 	<h3>Rekapitulasi ASN Kabupaten Merangin (per Desember 2024)</h3>
 	<!--style="font-size:2vw;"-->
 
-		<!--<div class="chart-rekap">
-			<div class="chart-status-asn">
+		<div class="chart-rekap" style="justify-content:center">
+
+			<!--<div class="chart">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%204&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
-			<div class="chart-gender-pns">
+			<div class="chart">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%202&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 
-			<div class="chart-gender-pppk">
+			<div class="chart">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%201&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
-			<p><br>
-			<div class="chart-age-asn">
+
+			<div class="chart">
 			<iframe width="535" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%205&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
-			</div></p>
+			</div>
 			
-			<div class="chart-edu-asn">
+			<div class="chart">
 			<iframe width="535" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%209&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
-			<div class="chart-Gol-asn">
+			<div class="chart">
 			<iframe width="327" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%207&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
-			<div class="chart-kp-asn">
+			<div class="chart">
 			<iframe width="458" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%2011&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
-			<div class="chart-jab-asn">
+			<div class="chart">
 			<iframe width="458" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%2010&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 
-			<div class="chart-ese-asn">
+			<div class="chart">
 			<iframe width="326" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%208&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
@@ -216,11 +215,11 @@
 		<canvas class="flex-item-half5" id="myChart5" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half6" id="myChart6" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half7" id="myChart7" style="max-width:300px"></canvas>
-		<canvas class="flex-item-half8" id="myChart8" style="max-width:300px"></canvas>-->
+		<canvas class="flex-item-half8" id="myChart8" style="max-width:300px"></canvas>
 		</div>
 		<div class="maps-rekap">
 		
-		</div>
+		</div>-->
 </div>
 <!------------------- FOOTER ----------------------------------->	
 	
@@ -281,9 +280,61 @@
 	
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 
-
-<script src="JavaScript/topnav.js"></script>
 <script src="JavaScript/script.js"></script>
-	
+
+<script>
+  let slideIndex = 1;
+  let slideTimer;
+
+  function showSlides(n) {
+    let slides = document.getElementsByClassName("slides");
+    let dots = document.getElementsByClassName("dot");
+    let thumbs = document.querySelectorAll(".thumbnail-row img");
+
+    if (n > slides.length) { slideIndex = 1 }
+    if (n < 1) { slideIndex = slides.length }
+
+    for (let i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+    }
+
+    for (let i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+    }
+
+    thumbs.forEach(img => img.classList.remove("active-thumb"));
+
+    slides[slideIndex-1].style.display = "block";
+    dots[slideIndex-1].className += " active";
+    thumbs[slideIndex-1].classList.add("active-thumb");
+  }
+
+  function plusSlides(n) {
+    clearInterval(slideTimer);
+    slideIndex += n;
+    showSlides(slideIndex);
+    autoSlide();
+  }
+
+  function currentSlide(n) {
+    clearInterval(slideTimer);
+    slideIndex = n;
+    showSlides(slideIndex);
+    autoSlide();
+  }
+
+  function autoSlide() {
+    slideTimer = setInterval(() => {
+      slideIndex++;
+      if (slideIndex > document.getElementsByClassName("slides").length) { slideIndex = 1 }
+      showSlides(slideIndex);
+    }, 4000); // 4 seconds
+  }
+
+  // Initialize
+  showSlides(slideIndex);
+  autoSlide();
+</script>
+
 </body>
 </html>
