Update slideshow, styles, and add new announcements
Enhanced the InfoGrafis section with a new custom slideshow and updated captions in index.html and index.css. Replaced references to topnav.js with script.js across multiple HTML files. Improved responsive styles in pengumuman.css and footer.css. Added three new PDF announcement files and updated images in InfoGrafis. Minor HTML and CSS cleanups for better layout and accessibility.

--- a/layanan.html
+++ b/layanan.html
@@ -282,7 +282,7 @@
 	
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 	
-<script src="JavaScript/topnav.js"></script>
+<script src="JavaScript/script.js"></script>
 
 <script>
 function openNav() {
