--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 <link href="/CSS/topnav.css" rel="stylesheet" type="text/css">
 <link href="/CSS/footer.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
-<!--<link href="slideShow.css" rel="stylesheet" type="text/css">-->
-
 
 <title>BKPSDMD Kabupaten Merangin</title>
 <link rel="shortcut icon" href="icon/IconWeb.png">
@@ -93,10 +91,10 @@
 </div>
 	
 <!------------------- CONTENT ----------------------------------->
-<!--
+
 <div class="infoGrafis">
 	<h2>INFO GRAFIS</h2>
-	<img class="mySlides" src="images/InfoGrafis/1.jpg">
+	<!--<img class="mySlides" src="images/InfoGrafis/1.jpg">
 	<img class="mySlides" src="images/InfoGrafis/2.jpg">
 	<img class="mySlides" src="images/InfoGrafis/3.jpg">
 	<img class="mySlides" src="images/InfoGrafis/4.jpg">
@@ -105,51 +103,94 @@
 	<img class="mySlides" src="images/InfoGrafis/7.jpg">
 	<img class="mySlides" src="images/InfoGrafis/8.jpg">
 	<img class="mySlides" src="images/InfoGrafis/9.jpg">
-	<img class="mySlides" src="images/InfoGrafis/10.jpg">
-</div>-->
+	<img class="mySlides" src="images/InfoGrafis/10.jpg">-->
+
 <div class="slideshow-container">
-
+	
   <div class="slides">
-    <img src="https://picsum.photos/id/1015/900/500" alt="Nature 1">
-    <div class="caption">Beautiful Mountain View</div>
+    <img src="images/InfoGrafis/1.jpg" alt="Nature 1">
+    <div class="caption">Kantor Bupati Merangin</div>
   </div>
 
   <div class="slides">
-    <img src="https://picsum.photos/id/1025/900/500" alt="Nature 2">
-    <div class="caption">Peaceful Beach</div>
+    <img src="images/InfoGrafis/2.jpg" alt="Nature 2">
+    <div class="caption">Pelaksanaan Evaluasi Kinerja PPT Pratama Tahun 2025</div>
   </div>
 
   <div class="slides">
-    <img src="https://picsum.photos/id/1035/900/500" alt="Nature 3">
-    <div class="caption">Misty Forest</div>
+    <img src="images/InfoGrafis/3.jpg" alt="Nature 3">
+    <div class="caption">MoU BKPSDMD dengan UNAJA - Penyelenggaraan Pendidikan Bagi ASN </div>
   </div>
 
   <div class="slides">
-    <img src="https://picsum.photos/id/1045/900/500" alt="Nature 4">
-    <div class="caption">Golden Sunset</div>
+    <img src="images/InfoGrafis/4.jpg" alt="Nature 4">
+    <div class="caption">Perayaan HUT RI Ke-80</div>
   </div>
 
+  <div class="slides">
+    <img src="images/InfoGrafis/5.jpg" alt="Nature 4">
+    <div class="caption">Perayaan HUT RI Ke-80</div>
+  </div>
+
+  <div class="slides">
+    <img src="images/InfoGrafis/6.jpg" alt="Nature 4">
+    <div class="caption">Perayaan HUT RI Ke-80</div>
+  </div>
+
+  <div class="slides">
+    <img src="images/InfoGrafis/7.jpg" alt="Nature 4">
+    <div class="caption">Perayaan HUT RI Ke-80</div>
+  </div>
+
+  <div class="slides">
+    <img src="images/InfoGrafis/8.jpg" alt="Nature 4">
+    <div class="caption">Perayaan HUT RI Ke-80</div>
+  </div>
+
+  <div class="slides">
+	<img src="images/InfoGrafis/9.jpg" alt="Nature 4">
+	<div class="caption">Perayaan HUT RI Ke-80</div>
+  </div>
+
+  <div class="slides">
+	<img src="images/InfoGrafis/10.jpg" alt="Nature 4">
+	<div class="caption">Perayaan HUT RI Ke-80</div>
+  </div>
+  
   <!-- Navigation arrows -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
 </div>
 
-<!-- Dots -->
-<div class="dots">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-</div>
+	<!-- Dots -->
+	<div class="dots">
+	<span class="dot" onclick="currentSlide(1)"></span>
+	<span class="dot" onclick="currentSlide(2)"></span>
+	<span class="dot" onclick="currentSlide(3)"></span>
+	<span class="dot" onclick="currentSlide(4)"></span>
+	<span class="dot" onclick="currentSlide(5)"></span>
+	<span class="dot" onclick="currentSlide(6)"></span>
+	<span class="dot" onclick="currentSlide(7)"></span>
+	<span class="dot" onclick="currentSlide(8)"></span>
+	<span class="dot" onclick="currentSlide(9)"></span>
+	<span class="dot" onclick="currentSlide(10)"></span>
+	</div>
 
-<!-- Thumbnail navigation -->
-<div class="thumbnail-row">
-  <img src="https://picsum.photos/id/1015/200/120" onclick="currentSlide(1)">
-  <img src="https://picsum.photos/id/1025/200/120" onclick="currentSlide(2)">
-  <img src="https://picsum.photos/id/1035/200/120" onclick="currentSlide(3)">
-  <img src="https://picsum.photos/id/1045/200/120" onclick="currentSlide(4)">
+	<!-- Thumbnail navigation -->
+	<div class="thumbnail-row">
+	<img src="images/InfoGrafis/1.jpg" onclick="currentSlide(1)">
+	<img src="images/InfoGrafis/2.jpg" onclick="currentSlide(2)">
+	<img src="images/InfoGrafis/3.jpg" onclick="currentSlide(3)">
+	<img src="images/InfoGrafis/4.jpg" onclick="currentSlide(4)">
+	<img src="images/InfoGrafis/5.jpg" onclick="currentSlide(1)">
+	<img src="images/InfoGrafis/6.jpg" onclick="currentSlide(2)">
+	<img src="images/InfoGrafis/7.jpg" onclick="currentSlide(3)">
+	<img src="images/InfoGrafis/8.jpg" onclick="currentSlide(4)">
+	<img src="images/InfoGrafis/9.jpg" onclick="currentSlide(3)">
+	<img src="images/InfoGrafis/10.jpg" onclick="currentSlide(4)">
+	</div>
 </div>
-
 <div class="pidato-kaban">
 	<h2> Sekapur Sirih<br><p>Kepala BKPSDMD Kabupaten Merangin</p></h2>
 	<img src="images/Foto_Kaban.png" alt="Foto Kaban">
@@ -166,12 +207,12 @@
 	
 <div class="asn-rekap">
 	<h2>STATISTIK</h2>
-	<h3>Rekapitulasi ASN Kabupaten Merangin (per Desember 2024)</h3>
+	<p>Rekapitulasi ASN Kabupaten Merangin (per Desember 2024)</p>
 	<!--style="font-size:2vw;"-->
 
-		<div class="chart-rekap" style="justify-content:center">
+		<!--<div class="chart-rekap" style="justify-content:center">
 
-			<!--<div class="chart">
+			<div class="chart">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%204&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
