--- a/transparansi.html
+++ b/transparansi.html
@@ -148,11 +148,11 @@
     .then(count => {
       document.getElementById("visitor-count").innerText = count;
     });
-</script>
+</script>-->
 	
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 	
-<script src="JavaScript/topnav.js"></script>
+<script src="JavaScript/script.js"></script>
 	
 </body>
 </html>
