Add diklat history page and update pengumuman section
Added new historyDiklat.html and its CSS for displaying diklat records, and linked it from layanan.html. Updated pengumuman.html to show recent PPPK announcement details and poster, including links to new PDF files. Renamed and moved pengumuman PDF files, added Poster.png, updated several icons, and made layout and style improvements in index.html, index.css, pengumuman.css, and layanan.html.

--- a/layanan.html
+++ b/layanan.html
@@ -90,7 +90,7 @@
 
 <div class="layananBKD">
 
-    <h1 class="layananKPG">Layanan Kepegawaian <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
+    <h1 class="layananKPG" id="kpg">Layanan Kepegawaian <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
     
     <div class="flex-container">
 
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    <h1 class="layananPSDM">Layanan Pengembangan SDM <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
+    <h1 class="layananPSDM" id="psdm">Layanan Pengembangan SDM <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
     <div class="flex-container">
 
         <div class="flex-item-main"><p><a href="#" target="_blank" >
@@ -176,7 +176,7 @@
         <img src="icon/PSDM/sakit.png" width="100px"></a><br>CUTI<br><sub>Permohonan Cuti</sub></p>
         </div>
 
-        <div class="flex-item-main"><p><a href="#" target="_blank" >
+        <div class="flex-item-main"><p><a href="historyDiklat.html">
         <img src="icon/PSDM/diklat.png" width="100px"></a><br>DIKLAT<br><sub>Informasi Mengenai Diklat</sub></p>
         </div>
 
