--- a/pengumuman.html
+++ b/pengumuman.html
@@ -88,9 +88,24 @@
 <!------------------- CONTENT ----------------------------------->
 
 <div class="pengumuman" id="">
-	<p>COMING SOON!!!</p>
-	<p>Mohon Bersabar Yaa!!!</p>
-	<p>This Page Is Under Construction, Thanks!</p>  
+	<div class="breadcrumb">
+		<h1>Pengumuman Pembatalan Kelulusan dan Afirmasi Eks THK II PPPK Merangin 2024</h1>
+		<img src="/file/pengumuman/Poster.png" alt="Banner Pengumuman" width="100%" style="padding-bottom: 20px;">
+		<p>Berikut dilampirkan :</p>
+
+		<p>1. Pengumuman Nomor 810/038/BKPSDMD/2025 tentang Pembatalan Kelulusan Pelamar Seleksi Pegawai Pemerintah Dengan Perjanjian Kerja Kabupaten Merangin Formasi Tahun 2024. Dokumen pengumuman dapat didownload
+			<a href="/file/pengumuman/Pengumuman-Nomor-810-038-BKPSDMD-2025.pdf"> di sini</a>
+		</p>
+
+		<p>2. Pengumuman Nomor 810/039/BKPSDMD/2025 tentang Pembatalan Kelulusan Pelamar Seleksi Pegawai Pemerintah Dengan Perjanjian Kerja Kabupaten Merangin Formasi Tahun 2024. Dokumen pengumuman dapat didownload 
+			<a href="/file/pengumuman/Pengumuman-Nomor-810-039-BKPSDMD-2025.pdf"> di sini</a>
+		</p>
+		
+		<p>3. Pengumuman Nomor 810/040/BKPSDMD/2025 tentang Pembatalan Status / Afirmasi Sebagai Eks Tenaga Honorer Kategori II Seleksi Pegawai Pemerintah Dengan Perjanjian Kerja Kabupaten Merangin Formasi Tahun 2024. Dokumen pengumuman dapat didownload
+			<a href="/file/pengumuman/Pengumuman-Nomor-810-040-BKPSDMD-2025.pdf"> di sini</a>
+		</p>
+	</div>
+
 </div>
 	
 <!------------------- FOOTER ----------------------------------->	
