Add PPID styles and update content sections
Introduces ppid.css for dedicated PPID and Transparansi page styling, updates ppid.html and transparansi.html to use the new styles and display a 'Coming Soon' message. Enhances index.html with improved formatting for the 'Sekapur Sirih' section, updates pengumuman.html to embed Google Drive previews for announcements, and makes minor text and style adjustments across several pages.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div class="navRight" >
 		
 		<div class="dropdown">
-			<button onclick="toggleDropdown('menu1')" class="dropbtn"><chose>PROFIL</chose> <i class="fa fa-caret-down"></i></button>
+			<button onclick="toggleDropdown('menu1')" class="dropbtn">PROFIL <i class="fa fa-caret-down"></i></button>
 		  <div id="menu1" class="dropdown-content">
 			<a href="profil.html#visiMisi">Visi dan Misi</a>
 			<a href="profil.html#selaPang">Selayang Pandang</a>
@@ -190,12 +190,14 @@
 <div class="pidato-kaban">
 	<h2> Sekapur Sirih<br><p>Kepala BKPSDMD Kabupaten Merangin</p></h2>
 	<img src="images/Foto_Kaban.png" alt="Foto Kaban">
-	<p>Assalamu'alaikum Warahmatullahi Wabarakaatuh</p>
-	<p>Puji syukur kita panjatkan ke hadirat Allah SWT, karena atas rahmat dan karunia-Nya, Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah Kabupaten Merangin dapat meluncurkan Website Resmi BKPSDM Kabupaten Merangin sebagai salah satu sarana informasi dan pelayanan publik.</p>
-	<p>Peluncuran website ini merupakan wujud komitmen kami dalam meningkatkan kualitas layanan kepegawaian serta pengembangan sumber daya aparatur secara lebih transparan, efektif, dan mudah diakses oleh seluruh ASN maupun masyarakat. Melalui platform ini, kami berharap seluruh informasi terkait kepegawaian, pengembangan kompetensi, maupun layanan administrasi dapat tersampaikan dengan lebih cepat, akurat, dan terbuka.</p>
-	<p>Website ini juga menjadi langkah nyata dalam mendukung transformasi digital pemerintah daerah, sejalan dengan tuntutan era teknologi informasi yang semakin maju. Kami meyakini, dengan adanya media layanan berbasis digital ini, BKPSDM Kabupaten Merangin akan mampu memberikan pelayanan yang lebih prima, modern, serta menjawab kebutuhan ASN dan masyarakat dengan lebih baik.</p>
-	<p>Akhir kata, kami mengajak seluruh ASN dan masyarakat untuk memanfaatkan website ini sebaik-baiknya, serta memberikan masukan demi peningkatan kualitas layanan BKPSDM di masa yang akan datang.</p>
-	<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.</p>
+	<div class="isiPidato">	
+		<p>&#10077;Assalamu'alaikum Warahmatullahi Wabarakaatuh,</p>
+		<p>Puji syukur kita panjatkan ke hadirat Allah SWT, karena atas rahmat dan karunia-Nya, Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah (BKPSDMD) Kabupaten Merangin dapat meluncurkan Website Resmi BKPSDMD Kabupaten Merangin sebagai salah satu sarana informasi dan pelayanan publik.</p>
+		<p>Peluncuran website ini merupakan wujud komitmen kami dalam meningkatkan kualitas layanan kepegawaian serta pengembangan sumber daya aparatur secara lebih transparan, efektif, dan mudah diakses oleh seluruh ASN maupun masyarakat. Melalui platform ini, kami berharap seluruh informasi terkait kepegawaian, pengembangan kompetensi, maupun layanan administrasi dapat tersampaikan dengan lebih cepat, akurat, dan terbuka.</p>
+		<p>Website ini juga menjadi langkah nyata dalam mendukung transformasi digital pemerintah daerah, sejalan dengan tuntutan era teknologi informasi yang semakin maju. Kami meyakini, dengan adanya media layanan berbasis digital ini, BKPSDMD Kabupaten Merangin akan mampu memberikan pelayanan yang lebih prima, modern, serta menjawab kebutuhan ASN dan masyarakat dengan lebih baik.</p>
+		<p>Akhir kata, kami mengajak seluruh ASN dan masyarakat untuk memanfaatkan website ini sebaik-baiknya, serta memberikan masukan demi peningkatan kualitas layanan BKPSDMD di masa yang akan datang.</p>
+		<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.&#10078;</p>
+	</div>
 	<p>Merangin, 26 Agustus 2025<br>Kepala BKPSDM Kabupaten Merangin<br><b>H. Ferdi Firdaus Ansori, S.Sos., M.E.</b></p>
 	
 	
