--- a/layanan.html
+++ b/layanan.html
@@ -111,7 +111,7 @@
 
         <div class="flex-item-main">
             <p><a href="/images/LayananKPG/jabatanPelaksana.PNG" target="_blank" >
-            <img src="icon/Kepegawaian/pelaksana.png"width="100px"></a><br>MUTASI JABATAN PELAKSANA<br><sub>Persyaratan Kenaikan Jabatan Pelaksana</sub></p>
+            <img src="icon/Kepegawaian/pelaksana.png"width="100px"></a><br>MUTASI JABATAN PELAKSANA<br><sub>Persyaratan Mutasi Jabatan Pelaksana</sub></p>
         </div>
 
         <div class="flex-item-main">
