--- a/pengumuman.html
+++ b/pengumuman.html
@@ -87,23 +87,27 @@
 	
 <!------------------- CONTENT ----------------------------------->
 
-<div class="pengumuman" id="">
-	<div class="breadcrumb">
-		<h1>Pengumuman Pembatalan Kelulusan dan Afirmasi Eks THK II PPPK Merangin 2024</h1>
+<div class="pengumuman">
+	
+	<div class="breadcrumb" >
 		<img src="/file/pengumuman/Poster.png" alt="Banner Pengumuman" width="100%" style="padding-bottom: 20px;">
+		<h1>Pengumuman Pembatalan Kelulusan dan Afirmasi Eks THK II PPPK Merangin 2024</h1>
 		<p>Berikut dilampirkan :</p>
 
 		<p>1. Pengumuman Nomor 810/038/BKPSDMD/2025 tentang Pembatalan Kelulusan Pelamar Seleksi Pegawai Pemerintah Dengan Perjanjian Kerja Kabupaten Merangin Formasi Tahun 2024. Dokumen pengumuman dapat didownload
 			<a href="/file/pengumuman/Pengumuman-Nomor-810-038-BKPSDMD-2025.pdf"> di sini</a>
 		</p>
-
+		<iframe src="https://drive.google.com/file/d/1L1BIEFUhq3cKc1SEnggzve6I2252g6_e/preview" width="100%" height="480" allow="autoplay"></iframe>
+		
 		<p>2. Pengumuman Nomor 810/039/BKPSDMD/2025 tentang Pembatalan Kelulusan Pelamar Seleksi Pegawai Pemerintah Dengan Perjanjian Kerja Kabupaten Merangin Formasi Tahun 2024. Dokumen pengumuman dapat didownload 
 			<a href="/file/pengumuman/Pengumuman-Nomor-810-039-BKPSDMD-2025.pdf"> di sini</a>
 		</p>
+		<iframe src="https://drive.google.com/file/d/1MzzdT9PzNm_pDSCunzmiPkFASJ62lkXm/preview" width="100%" height="480" allow="autoplay"></iframe>
 		
 		<p>3. Pengumuman Nomor 810/040/BKPSDMD/2025 tentang Pembatalan Status / Afirmasi Sebagai Eks Tenaga Honorer Kategori II Seleksi Pegawai Pemerintah Dengan Perjanjian Kerja Kabupaten Merangin Formasi Tahun 2024. Dokumen pengumuman dapat didownload
 			<a href="/file/pengumuman/Pengumuman-Nomor-810-040-BKPSDMD-2025.pdf"> di sini</a>
 		</p>
+		<iframe src="https://drive.google.com/file/d/1h2JrTVAslo13_S0ltFYU7gf7ip-orQ92/preview" width="100%" height="480" allow="autoplay"></iframe>
 	</div>
 
 </div>
