--- a/transparansi.html
+++ b/transparansi.html
@@ -15,7 +15,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <link href="/CSS/topnav.css" rel="stylesheet" type="text/css">
 <link href="/CSS/footer.css" rel="stylesheet" type="text/css">
-<link href="pengumuman.css" rel="stylesheet" type="text/css">
+<link href="ppid.css" rel="stylesheet" type="text/css">
 
 <title>BKPSDMD Kabupaten Merangin</title>
 <link rel="shortcut icon" href="icon/IconWeb.png">
@@ -87,7 +87,7 @@
 	
 <!------------------- CONTENT ----------------------------------->
 
-<div class="pengumuman" id="renstra">
+<div class="coomingSoon" id="renstra">
 	<p>COMING SOON!!!</p>
 	<p>Mohon Bersabar Yaa!!!</p>
 	<p>This Page Is Under Construction, Thanks!</p>  
