--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 	<h2>STATISTIK<br><p>Rekapitulasi ASN Kabupaten Merangin (per Desember 2024)</p></h2>
 	<!--style="font-size:2vw;"-->
 
-		<div class="chart-rekap" style="justify-content:center">
+		<!--<div class="chart-rekap" style="justify-content:center">
 
 			<div class="chart">
 			<iframe width="325" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%204&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
@@ -243,7 +243,7 @@
 			<iframe width="326" height="287" frameborder="0" scrolling="no" src="https://1drv.ms/x/c/8ef122d5280ec801/IQSO9Lmf51jOT78Wk8csCS7eAQ-61IXDUuLdtoS4tRr7DjU?em=2&wdAllowInteractivity=False&Item=Chart%208&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"></iframe>
 			</div>
 			
-		<!--<canvas class="flex-item-half1" style="max-width:325px"></canvas>
+		<canvas class="flex-item-half1" style="max-width:325px"></canvas>
 		<canvas class="flex-item-half2" id="myChart2" style="max-width:300px"></canvas>	
 		<canvas class="flex-item-half3" id="myChart3" style="max-width:300px"></canvas>
 		<canvas class="flex-item-half4" id="myChart4" style="max-width:300px"></canvas>
